test_regress/t/t_disable_bad.out
%Error: t/t_disable_bad.v:9:13: Can't find definition of block/task: 'abcd'
    9 |     disable abcd;
      |             ^~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
